--- a/fiware-proxy/context-producer/pom.xml
+++ b/fiware-proxy/context-producer/pom.xml
@@ -136,6 +136,16 @@
             <version>3.2.0</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.30</version>
+        </dependency>
     </dependencies>    
     <build>        
         <plugins>
