--- a/fiware-proxy/context-producer/pom.xml
+++ b/fiware-proxy/context-producer/pom.xml
@@ -57,7 +57,7 @@
         <repository>
             <id>maven-restlet</id>
             <name>Restlet repository</name>
-            <url>http://maven.restlet.com</url>
+            <url>https://maven.restlet.talend.com</url>
         </repository>
     </repositories>
     <dependencies>
