--- a/fiware-proxy/context-consumer/pom.xml
+++ b/fiware-proxy/context-consumer/pom.xml
@@ -17,7 +17,7 @@
         <repository>
             <id>maven-restlet</id>
             <name>Restlet repository</name>
-            <url>http://maven.restlet.com</url>
+            <url>https://maven.restlet.talend.com</url>
         </repository>
     </repositories>
     <dependencies>
@@ -29,8 +29,8 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
             <version>2.17.0</version>
         </dependency>
         <dependency>
